test_translator/tests/data/checkpoint_2/core/pass/10_set_basic/tests.py
assert make_set() == {1, 2, 3}
assert set_from_list([1, 2, 2, 3]) == {1, 2, 3}
assert empty_set() == set()
