test_translator/tests/data/checkpoint_2/core/fail/01_dict_int_keys/tests.py
assert get_int_dict() == {1: "a", 2: "b", 3: "c"}
assert lookup({10: "ten", 20: "twenty"}, 10) == "ten"
